create GenericContinuousEffect to migrate with new FilterTyped and ObjectQuery